--- a/style.css
+++ b/style.css
@@ -8,15 +8,22 @@
 
 .container {
   display: grid;
-  grid-template-columns: auto auto;
+  grid-template-columns: max-content auto;
   grid-template-rows: 2.5vw;
-  width: 18vw;
+  width: 15vw;
   gap: 0.5vw;
   margin: 0.5vw;
 }
 
 div.title {
   float: left;
+  /* font-size: 22px;
+  letter-spacing: 2px;
+  font-family: "Courier New", Courier, monospace; */
+}
+div {
+  overflow: hidden;
+  white-space: nowrap;
 }
 .container_active {
   background-color: rgb(32, 95, 178) !important;
@@ -31,6 +38,10 @@ li.container:hover {
   position: absolute;
   top: 5vh;
   right: 20vw;
+  width: 30vw;
+}
+div.caption.title {
+  float: inherit;
 }
 .container0 {
   position: absolute;
@@ -43,8 +54,4 @@ li.container:hover {
   border-radius: 1%;
   height: 80vh;
   width: 30vw;
-}
-figcaption {
-  padding: 2px;
-  text-align: center;
 }
